--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   	    	<a href="https://www.instagram.com/cypriensard/" target="_blank"> 
   	    	<img id="insta-icon" src="assets/instagram.png"><a/>
    	  	    <a href="https://brand.vero.co/" target="_blank"><img id="insta-icon" src="assets/vero.png"><a/>
-   	  	    <div onclick="change('mail')"><img id="insta-icon" src="assets/gmail.png"></div>	
+   	  	    <img id="insta-icon" src="assets/gmail.png" onclick="change('mail')">
    		</div>
 		<div class="image_container">
 			<img id="image" src="assets/export 4-5.jpg" />
