--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
    		<div id="mail">cyprien.sardou@gmail.com</div>    
    		<div id="icon-container">
   	    	<a href="https://www.instagram.com/cypriensard/" target="_blank"> 
-  	    	<img id="insta-icon" src="assets/instagram.png"><a/>
-   	  	    <a href="https://brand.vero.co/" target="_blank"><img id="insta-icon" src="assets/vero.png"><a/>
+  	    	<img id="insta-icon" src="assets/instagram.png"></a>
+   	  	    <a href="https://brand.vero.co/" target="_blank"><img id="insta-icon" src="assets/vero.png"></a>
    	  	    <img id="insta-icon" src="assets/gmail.png" onclick="change('mail')">
    		</div>
 		<div class="image_container">
