--- a/index.html
+++ b/index.html
@@ -59,10 +59,8 @@
 		<div id="white-trans"></div>
 		<img id="Iceland" src="assets/winter.jpg" draggable=false />
 		<div id="video-container">
-      		<video controls width="500vw" height="300vw" autoplay muted> 
-        		<!-- <source  src="assets/ICELAND for reel.mp4"/> -->
-     		 </video>
-    	</div>
+      		<iframe width="500px" height="300px" src="https://www.youtube.com/embed/egNNiX58cig?si=Ykxqq9g3F2nPdqLe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    		</div>
 		<script src="script.js"></script> 	
 	</body>
 </html>
