--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
 			<img id="image" src="assets/maison 3.jpg" />
 			<img id="image" src="assets/bzz.jpg" />
 			<img id="image" src="assets/LUNAR.jpg"/>
+			<img id="image" src="assets/export 3-9-min.jpg"/>
+			<img id="image" src="assets/polar fox-min.jpg"/>
+			<img id="image" src="assets/moutons-min.jpg"/>
+			<img id="image" src="assets/export 4-3-min.jpg"/>
 			<img id="image" src="assets/export 7.jpg"/>
 			<img id="image" src="assets/abcde.jpg"/>
 			<img id="image" src="assets/export 3-7.jpg"/>
