--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<img id="image" src="assets/teal2.jpg"/>
 			<img id="image" src="assets/export 2-9.jpg"/>
 			<img id="image" src="assets/export 3.jpg"/>
-
+			<img id="image" src="assets/sunset 2 corse_.jpg"/>
 		</div>
 		<div id="white-trans"></div>
 		<img id="Iceland" src="assets/winter.jpg" draggable=false />
