--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 	<head>
 		<title></title>
-			<meta charset="UTF-8">
+		<meta charset="UTF-8">
     		<meta name="viewport" content="width=device-width, initial-scale=1">
-   			 <link href="style.css" rel="stylesheet">
-   			 <link rel="preconnect" href="https://fonts.googleapis.com">
-   			 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
+   		<link href="style.css" rel="stylesheet">
+   		<link rel="preconnect" href="https://fonts.googleapis.com">
+   		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 
 	<body translate="no">
