--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		<div id="white-trans"></div>
 		<img id="Iceland" src="assets/winter.jpg" draggable=false />
 		<div id="video-container">
-      		<iframe width="300" height="200w" src="https://www.youtube.com/embed/egNNiX58cig?si=Ykxqq9g3F2nPdqLe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      		<iframe width="400" height="225" src="https://www.youtube.com/embed/egNNiX58cig?si=Ykxqq9g3F2nPdqLe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     		</div>
 		<script src="script.js"></script> 	
 	</body>
