--- a/index.html
+++ b/index.html
@@ -13,23 +13,12 @@
 	<body translate="no">
 
 		<img id="wallpaper" src="assets/fleurs.jpg" draggable=false />
-		<div id="title">CYPRIENSARD</div>
-		<div class="mon-bouton">
-		<a href="#image">
-			<button><strong>Explore</strong></button>
-		</a>
-		</div>
- 	    <div id="first-black-band"></div>
- 	    <div id="citation">
-      		<blockquote><i>The World is a bush full of hidden looks</i></blockquote>
-      		<p>Vincent Munier</p>
-      	</div>
-   		<div id="mail">cyprien.sardou@gmail.com</div>    
+		<div id="title"><blockquote><i>The World is a bush full of hidden looks</i></blockquote><p>Vincent Munier</p></div>
+ 	    <div id="first-black-band"></div>  
    		<div id="icon-container">
-  	    	<a href="https://www.instagram.com/cypriensard/" target="_blank"> 
-  	    	<img id="insta-icon" src="assets/instagram.png"></a>
-   	  	    <a href="https://brand.vero.co/" target="_blank"><img id="insta-icon" src="assets/vero.png"></a>
-   	  	    <img id="insta-icon" src="assets/gmail.png" onclick="change('mail')">
+  	    	<a href="https://www.instagram.com/cypriensard/" target="_blank"><img id="insta-icon" src="assets/instagram.png"></a>
+   	  	    <a href="https://www.youtube.com/channel/UC2f8wawq-QHPMXbLxRblVVA" target="_blank"><img id="insta-icon" src="assets/youtube.png"></a>
+   	  	    <a href="mailto:cyprien.sardou@gmail.com"><img id="insta-icon" src="assets/gmail.png"></a>
    		</div>
 		<div class="image_container">
 			<img id="image" src="assets/export 4-5.jpg" />
@@ -58,10 +47,11 @@
 			<img id="image" src="assets/sunset 2 corse_.jpg"/>
 		</div>
 		<div id="white-trans"></div>
-		<img id="Iceland" src="assets/winter.jpg" draggable=false />
-		<div id="video-container">
-      		<iframe width="200vw" height="112.5vw" src="https://www.youtube.com/embed/egNNiX58cig?si=Ykxqq9g3F2nPdqLe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    	</div>
+		<div class="video-part-container">
+			<img id="Iceland" src="assets/winter.jpg" draggable=false />
+			<div id="video"><iframe src="https://www.youtube.com/embed/egNNiX58cig?si=Ykxqq9g3F2nPdqLe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+    	</div>	
+
 		<script src="script.js"></script> 	
 	</body>
 </html>
