--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 
 	<body translate="no">
 
-		<img id="wallpaper" src="assets/fleurs.jpg" draggable=false />
-		<div id="title"><blockquote><i>The World is a bush full of hidden looks</i></blockquote><p>Vincent Munier</p></div>
+		<img id="wallpaper" src="assets/night.jpg" draggable=false />
+		<img id="photos" src="assets/portrait1.jpg" draggable=false />
+		<div id="title"><blockquote><i>The World is a bush full of hidden looks</i></blockquote></div>
+		<div id="auteur">Vincent Munier</div>
+		<div id="name">Cypriensard</div>
  	    <div id="first-black-band"></div>  
    		<div id="icon-container">
   	    	<a href="https://www.instagram.com/cypriensard/" target="_blank"><img id="insta-icon" src="assets/instagram.png"></a>
