--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<body translate="no">
 
 		<img id="wallpaper" src="assets/night.jpg" draggable=false />
-		<img id="photos" src="assets/portrait.jpg" draggable=false />
+		<img id="photos" src="assets/portrait1.jpg" draggable=false />
 		<div id="title"><blockquote><i>The World is a bush full of hidden looks</i></blockquote></div>
 		<div id="auteur">Vincent Munier</div>
 		<div id="name">Cypriensard</div>
