--- a/index.html
+++ b/index.html
@@ -24,30 +24,30 @@
    	  	    <a href="mailto:cyprien.sardou@gmail.com"><img id="insta-icon" src="assets/gmail.png"></a>
    		</div>
 		<div class="image_container">
-			<img id="image" src="assets/export 4-5.jpg" />
-			<img id="image" src="assets/export 10-2.jpg"/>
-			<img id="image" src="assets/export 6.jpg" />
-			<img id="image" src="assets/photos bardenas-5.jpg" />
-			<img id="image" src="assets/export 1-4.jpg"  />
-			<img id="image" src="assets/moto 3.jpg" />
-			<img id="image" src="assets/maison 3.jpg" />
-			<img id="image" src="assets/bar _-min.jpg" />
-			<img id="image" src="assets/bzz.jpg" />
-			<img id="image" src="assets/LUNAR.jpg"/>
-			<img id="image" src="assets/export 3-9-min.jpg"/>
-			<img id="image" src="assets/polar fox-min.jpg"/>
-			<img id="image" src="assets/moutons-min.jpg"/>
-			<img id="image" src="assets/export 4-3-min.jpg"/>
-			<img id="image" src="assets/export 7.jpg"/>
-			<img id="image" src="assets/abcde.jpg"/>
-			<img id="image" src="assets/export 3-7.jpg"/>
-			<img id="image" src="assets/gold. D.jpg"/>
-			<img id="image" src="assets/pyrénées 3b.jpg"/>
-			<img id="image" src="assets/cheval.jpg"/>
-			<img id="image" src="assets/gear5.jpg"/>
-			<img id="image" src="assets/Moon.jpg"/>
-			<img id="image" src="assets/teal2.jpg"/>
-			<img id="image" src="assets/sunset 2 corse_.jpg"/>
+			<img id="image" src="assets/export 4-5.jpg"loading="lazy" />
+			<img id="image" src="assets/export 10-2.jpg"loading="lazy"/>
+			<img id="image" src="assets/export 6.jpg" loading="lazy"/>
+			<img id="image" src="assets/photos bardenas-5.jpg" loading="lazy"/>
+			<img id="image" src="assets/export 1-4.jpg"loading="lazy"/>
+			<img id="image" src="assets/moto 3.jpg"loading="lazy" />
+			<img id="image" src="assets/maison 3.jpg" loading="lazy"/>
+			<img id="image" src="assets/bar _-min.jpg" loading="lazy"/>
+			<img id="image" src="assets/bzz.jpg" loading="lazy"/>
+			<img id="image" src="assets/LUNAR.jpg"loading="lazy"/>
+			<img id="image" src="assets/export 3-9-min.jpg"loading="lazy"/>
+			<img id="image" src="assets/polar fox-min.jpg"loading="lazy"/>
+			<img id="image" src="assets/moutons-min.jpg"loading="lazy"/>
+			<img id="image" src="assets/export 4-3-min.jpg"loading="lazy"/>
+			<img id="image" src="assets/export 7.jpg"loading="lazy"/>
+			<img id="image" src="assets/abcde.jpg"loading="lazy"/>
+			<img id="image" src="assets/export 3-7.jpg"loading="lazy"/>
+			<img id="image" src="assets/gold. D.jpg"loading="lazy"/>
+			<img id="image" src="assets/pyrénées 3b.jpg"loading="lazy"/>
+			<img id="image" src="assets/cheval.jpg"loading="lazy"/>
+			<img id="image" src="assets/gear5.jpg"loading="lazy"/>
+			<img id="image" src="assets/Moon.jpg"loading="lazy"/>
+			<img id="image" src="assets/teal2.jpg"loading="lazy"/>
+			<img id="image" src="assets/sunset 2 corse_.jpg"loading="lazy"/>
 		</div>
 		<div id="white-trans"></div>
 		<div class="video-part-container">
