--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		</div>
 		<div id="white-trans"></div>
 		<div class="video-part-container">
-			<img id="Iceland" src="assets/winter.jpg" draggable=false />
+			<img id="Iceland" src="assets/winter.jpg" draggable=false "loading="lazy"/>
 			<div id="video"><iframe src="https://www.youtube.com/embed/egNNiX58cig?si=Ykxqq9g3F2nPdqLe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
     	</div>	
 
