--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<body translate="no">
 
 		<div class="color-bloc-container">
-				<button class="monBouton" >photography</button>
+				<button class="monBouton" onclick="scrollToImageContainer()">photography</button>
 				<button onclick="window.location.href='index2.html';" class="monBouton">videography</button>
    		</div>
 		<img id="wallpaper" src="assets/night.jpg" draggable=false />
@@ -79,6 +79,6 @@
 			</div>
 		</div>
 		<script src="lightbox-plus-jquery.min.js"></script>	
-
+		<script src="script.js"></script> 
 	</body>
 </html>
