--- a/index2.html
+++ b/index2.html
@@ -14,11 +14,12 @@
 				<button class="monBouton">videography</button>
    		</div>
 
-	<div class="video-part-container">
-		<div class="video">
-			<iframe src="https://www.youtube.com/embed/egNNiX58cig?si=Ykxqq9g3F2nPdqLe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-			<iframe src="https://www.youtube.com/embed/egNNiX58cig?si=Ykxqq9g3F2nPdqLe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+		<div class="video-part-container">
+			<div class="video">
+				<a href="https://youtu.be/egNNiX58cig">
+					<img  src="assets/iceland.jpg"/></a>		
+				<a href="https://youtu.be/egNNiX58cig">
+					<img  src="assets/NOUVEL EXPORT-4.jpg"/></a>
     	</div>	
-
 	</body>
 </html>
