--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,7 @@
 				<a href="https://youtu.be/egNNiX58cig">
 					<img  src="assets/iceland.jpg"/></a>		
 				<a href="https://youtu.be/egNNiX58cig">
-					<img  src="assets/fleurs.jpg"/></a>
+					<img  src="assets/205 de Petigne.jpg"/></a>
     	</div>	
 	</body>
 </html>
