--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,7 @@
 		<div class="video-part-container">
 			<div class="video">
 				<a href="https://youtu.be/egNNiX58cig">
-					<img  src="assets/iceland.jpg"/></a>		
+					<img  src="assets/Iceland title.jpg"/></a>		
 				<a href="https://youtu.be/egNNiX58cig">
 					<img  src="assets/205 de Petigne.jpg"/></a>
     	</div>	
