--- a/index2.html
+++ b/index2.html
@@ -18,7 +18,7 @@
 			<div class="video">
 				<a href="https://youtu.be/egNNiX58cig">
 					<img  src="assets/Iceland title.jpg"/></a>		
-				<a href="https://youtu.be/egNNiX58cig">
+				<a href="https://youtu.be/cPFp-wY9n10">
 					<img  src="assets/205 de Petigne.jpg"/></a>
     	</div>	
 	</body>
