--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    		</div>
 		<img id="wallpaper" src="assets/night.jpg" draggable=false />
 		<img id="photos" src="assets/portrait1.jpg" draggable=false />
-		<div id="title"><i>The World is a bush full of hidden looks</i></div>
+		<div id="title"><i>The World is full of hidden looks</i></div>
 		<div id="name">Cypriensard</div>
    		<div id="icon-container">
   	    	<a href="https://www.instagram.com/cypriensard/" target="_blank"><img id="insta-icon" src="assets/instagram.png"></a>
@@ -52,6 +52,12 @@
 					<img  src="assets/export 3-9-min.jpg"loading="lazy"/></a>
 				<a href="assets/polar fox-min.jpg" data-lightbox="models">	
 					<img  src="assets/polar fox-min.jpg"loading="lazy"/></a>
+				<a href="assets/photo 1_-9.jpg" data-lightbox="models">	
+					<img  src="assets/COMPO ZINSTA.jpg"loading="lazy"/></a>
+				<a href="assets/photo 1_-9.jpg" data-lightbox="models">	
+					<img  src="assets/COMPO ZINSTA.jpg"loading="lazy"/></a>
+				<a href="assets/_DSC8066.jpg" data-lightbox="models">	
+					<img  src="assets/_DSC1484.jpg"loading="lazy"/></a>
 				<a href="assets/moutons-min.jpg" data-lightbox="models">	
 					<img  src="assets/moutons-min.jpg"loading="lazy"/></a>
 				<a href="assets/export 4-3-min.jpg" data-lightbox="models">	
