--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<a href="assets/photo 1_-9.jpg" data-lightbox="models">	
 					<img  src="assets/COMPO ZINSTA.jpg"loading="lazy"/></a>
 				<a href="assets/photo 1_-9.jpg" data-lightbox="models">	
-					<img  src="assets/COMPO ZINSTA.jpg"loading="lazy"/></a>
+					<img  src="assets/_DSC8066.jpg"loading="lazy"/></a>
 				<a href="assets/_DSC8066.jpg" data-lightbox="models">	
 					<img  src="assets/_DSC1484.jpg"loading="lazy"/></a>
 				<a href="assets/moutons-min.jpg" data-lightbox="models">	
