--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 					<img  src="assets/polar fox-min.jpg"loading="lazy"/></a>
 				<a href="assets/COMPO ZINSTA.jpg" data-lightbox="models">	
 					<img  src="assets/COMPO ZINSTA.jpg"loading="lazy"/></a>
-				<a href="assets/_DSC8066.jpg" data-lightbox="models">	
+				<a href="assets/cathédrale.jpg" data-lightbox="models">	
 					<img  src="assets/_DSC8066.jpg"loading="lazy"/></a>
-				<a href="assets/_DSC1484.jpg" data-lightbox="models">	
+				<a href="assets/cathédrale.jpg" data-lightbox="models">	
 					<img  src="assets/_DSC1484.jpg"loading="lazy"/></a>
 				<a href="assets/moutons-min.jpg" data-lightbox="models">	
 					<img  src="assets/moutons-min.jpg"loading="lazy"/></a>
