--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 				<a href="assets/COMPO ZINSTA.jpg" data-lightbox="models">	
 					<img  src="assets/COMPO ZINSTA.jpg"loading="lazy"/></a>
 				<a href="assets/cathédrale.jpg" data-lightbox="models">	
-					<img  src="assets/_DSC8066.jpg"loading="lazy"/></a>
-				<a href="assets/cathédrale.jpg" data-lightbox="models">	
-					<img  src="assets/_DSC1484.jpg"loading="lazy"/></a>
+					<img  src="assets/cathédrale.jpg"loading="lazy"/></a>
+				<a href="assets/tuture.jpg" data-lightbox="models">	
+					<img  src="assets/tuture.jpg"loading="lazy"/></a>
 				<a href="assets/moutons-min.jpg" data-lightbox="models">	
 					<img  src="assets/moutons-min.jpg"loading="lazy"/></a>
 				<a href="assets/export 4-3-min.jpg" data-lightbox="models">	
