--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					<img  src="assets/export 3-9-min.jpg"loading="lazy"/></a>
 				<a href="assets/polar fox-min.jpg" data-lightbox="models">	
 					<img  src="assets/polar fox-min.jpg"loading="lazy"/></a>
-				<a href="assets/COMPO ZINSTA.jpg" data-lightbox="models">	
+				<a href="assets/COMPO ZINSTA-min.jpg" data-lightbox="models">	
 					<img  src="assets/COMPO ZINSTA.jpg"loading="lazy"/></a>
 				<a href="assets/cathédrale.jpg" data-lightbox="models">	
 					<img  src="assets/cathédrale.jpg"loading="lazy"/></a>
