--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<a href="assets/polar fox-min.jpg" data-lightbox="models">	
 					<img  src="assets/polar fox-min.jpg"loading="lazy"/></a>
 				<a href="assets/COMPO ZINSTA-min.jpg" data-lightbox="models">	
-					<img  src="assets/COMPO ZINSTA.jpg"loading="lazy"/></a>
+					<img  src="assets/COMPO ZINSTA-min.jpg"loading="lazy"/></a>
 				<a href="assets/cathédrale.jpg" data-lightbox="models">	
 					<img  src="assets/cathédrale.jpg"loading="lazy"/></a>
 				<a href="assets/tuture.jpg" data-lightbox="models">	
