--- a/index2.html
+++ b/index2.html
@@ -13,13 +13,12 @@
 				<button onclick="window.location.href='index.html';"class="monBouton">photography</button>
 				<button class="monBouton">videography</button>
    		</div>
-
 		<div class="video-part-container">
 			<div class="video">
 				<a href="https://youtu.be/egNNiX58cig">
-					<img  src="assets/Iceland title.jpg"/></a>		
+					<img  src="assets/ICELAND.jpg"/></a>		
 				<a href="https://youtu.be/cPFp-wY9n10">
-					<img  src="assets/205 de Petigne.jpg"/></a>
+					<img  src="assets/poster205.jpg"/></a>
     			</div>	
 	</body>
 </html>
