--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 				<button class="monBouton" onclick="scrollToImageContainer()">photography</button>
 				<button onclick="window.location.href='index2.html';" class="monBouton">videography</button>
    		</div>
-		<img id="wallpaper" src="assets/DSC4953.webp" draggable=false />
-		<img id="photos" src="assets/portrait1.jpg" draggable=false />
+		<img id="wallpaper" src="assets/_DSC4953.webp" draggable=false />
+		<img id="photos" src="assets/portrait1.jpeg" draggable=false />
 		<div id="title"><i>The World is full of hidden looks</i></div>
 		<div id="name">Cypriensard</div>
    		<div id="icon-container">
@@ -27,64 +27,64 @@
    		</div>
 		<div class="image_container">
 			<div class="gallery">
-				<a href="assets/export 4-5.jpg" data-lightbox="models">
-					<img  src="assets/export 4-5.jpg"loading="lazy" /></a>
-				<a href="assets/export 10-2.jpg" data-lightbox="models">
-					<img  src="assets/export 10-2.jpg"loading="lazy"/></a>
-				<a href="assets/export 6.jpg" data-lightbox="models">
-					<img  src="assets/export 6.jpg" loading="lazy"/></a>
-				<a href="assets/photos bardenas-5.jpg" data-lightbox="models">
-					<img  src="assets/photos bardenas-5.jpg" loading="lazy"/></a>
-				<a href="assets/export 1-4.jpg" data-lightbox="models">
-					<img  src="assets/export 1-4.jpg"loading="lazy"/></a>
-				<a href="assets/moto 3.jpg" data-lightbox="models">
-					<img  src="assets/moto 3.jpg"loading="lazy" /></a>
-				<a href="assets/maison 3.jpg" data-lightbox="models">
-					<img  src="assets/maison 3.jpg" loading="lazy"/></a>
-				<a href="assets/bar _-min.jpg" data-lightbox="models">
-					<img  src="assets/bar _-min.jpg" loading="lazy"/></a>
-				<a href="assets/bzz.jpg" data-lightbox="models">
-					<img  src="assets/bzz.jpg" loading="lazy"/></a>
-				<a href="assets/LUNAR.jpg" data-lightbox="models">
-					<img  src="assets/LUNAR.jpg"loading="lazy"/></a>
-				<a href="assets/export 3-9-min.jpg" data-lightbox="models">	
-					<img  src="assets/export 3-9-min.jpg"loading="lazy"/></a>
-				<a href="assets/polar fox-min.jpg" data-lightbox="models">	
-					<img  src="assets/polar fox-min.jpg"loading="lazy"/></a>
-				<a href="assets/COMPO ZINSTA-min.jpg" data-lightbox="models">	
-					<img  src="assets/COMPO ZINSTA-min.jpg"loading="lazy"/></a>
-				<a href="assets/cathédrale.jpg" data-lightbox="models">	
-					<img  src="assets/cathédrale.jpg"loading="lazy"/></a>
-				<a href="assets/tuture.jpg" data-lightbox="models">	
-					<img  src="assets/tuture.jpg"loading="lazy"/></a>
-				<a href="assets/moutons-min.jpg" data-lightbox="models">	
-					<img  src="assets/moutons-min.jpg"loading="lazy"/></a>
-				<a href="assets/export 4-3-min.jpg" data-lightbox="models">	
-					<img  src="assets/export 4-3-min.jpg"loading="lazy"/></a>
-				<a href="assets/export 7.jpg" data-lightbox="models">	
-					<img  src="assets/export 7.jpg"loading="lazy"/></a>
-				<a href="assets/abcde.jpg" data-lightbox="models">	
-					<img  src="assets/abcde.jpg"loading="lazy"/></a>
-				<a href="assets/export 3-7.jpg" data-lightbox="models">	
-					<img  src="assets/export 3-7.jpg"loading="lazy"/></a>
-				<a href="assets/gold. D.jpg" data-lightbox="models">	
-					<img  src="assets/gold. D.jpg"loading="lazy"/></a>
-				<a href="assets/pyrénées 3b.jpg" data-lightbox="models">	
-					<img  src="assets/pyrénées 3b.jpg"loading="lazy"/></a>
-				<a href="assets/cheval.jpg" data-lightbox="models">	
-					<img  src="assets/cheval.jpg"loading="lazy"/></a>
-				<a href="assets/gear5.jpg" data-lightbox="models">	
-					<img  src="assets/gear5.jpg"loading="lazy"/></a>
-				<a href="assets/Moon.jpg" data-lightbox="models">	
-					<img  src="assets/Moon.jpg"loading="lazy"/></a>
-				<a href="assets/teal2.jpg" data-lightbox="models">	
-					<img  src="assets/teal2.jpg"loading="lazy"/></a>
-				<a href="assets/sunset 2 corse_.jpg" data-lightbox="models">	
-					<img  src="assets/sunset 2 corse_.jpg"loading="lazy"/></a>
-				<a href="assets/boat.jpg" data-lightbox="models">	
-					<img  src="assets/boat.jpg"loading="lazy"/></a>
-				<a href="assets/photo 1_-9.jpg" data-lightbox="models">	
-					<img  src="assets/photo 1_-9.jpg"loading="lazy"/></a>
+				<a href="assets/export 4-5.webp" data-lightbox="models">
+					<img  src="assets/export 4-5.webp"loading="lazy" /></a>
+				<a href="assets/export 10-2.webp" data-lightbox="models">
+					<img  src="assets/export 10-2.webp"loading="lazy"/></a>
+				<a href="assets/export 6.webp" data-lightbox="models">
+					<img  src="assets/export 6.webp" loading="lazy"/></a>
+				<a href="assets/photos bardenas-5.webp" data-lightbox="models">
+					<img  src="assets/photos bardenas-5.webp" loading="lazy"/></a>
+				<a href="assets/export 1-4.webp" data-lightbox="models">
+					<img  src="assets/export 1-4.webp"loading="lazy"/></a>
+				<a href="assets/moto 3.webp" data-lightbox="models">
+					<img  src="assets/moto 3.webp"loading="lazy" /></a>
+				<a href="assets/maison 3.webp" data-lightbox="models">
+					<img  src="assets/maison 3.webp" loading="lazy"/></a>
+				<a href="assets/bar _-min.webp" data-lightbox="models">
+					<img  src="assets/bar _-min.webp" loading="lazy"/></a>
+				<a href="assets/bzz.webp" data-lightbox="models">
+					<img  src="assets/bzz.webp" loading="lazy"/></a>
+				<a href="assets/LUNAR.webp" data-lightbox="models">
+					<img  src="assets/LUNAR.webp"loading="lazy"/></a>
+				<a href="assets/export 3-9-min.webp" data-lightbox="models">	
+					<img  src="assets/export 3-9-min.webp"loading="lazy"/></a>
+				<a href="assets/polar fox-min.webp" data-lightbox="models">	
+					<img  src="assets/polar fox-min.webp"loading="lazy"/></a>
+				<a href="assets/COMPO ZINSTA-min.webp" data-lightbox="models">	
+					<img  src="assets/COMPO ZINSTA-min.webp"loading="lazy"/></a>
+				<a href="assets/cathédrale.webp" data-lightbox="models">	
+					<img  src="assets/cathédrale.webp"loading="lazy"/></a>
+				<a href="assets/tuture.webp" data-lightbox="models">	
+					<img  src="assets/tuture.webp"loading="lazy"/></a>
+				<a href="assets/moutons-min.webp" data-lightbox="models">	
+					<img  src="assets/moutons-min.webp"loading="lazy"/></a>
+				<a href="assets/export 4-3-min.webp" data-lightbox="models">	
+					<img  src="assets/export 4-3-min.webp"loading="lazy"/></a>
+				<a href="assets/export 7.webp" data-lightbox="models">	
+					<img  src="assets/export 7.webp"loading="lazy"/></a>
+				<a href="assets/abcde.webp" data-lightbox="models">	
+					<img  src="assets/abcde.webp"loading="lazy"/></a>
+				<a href="assets/export 3-7.webp" data-lightbox="models">	
+					<img  src="assets/export 3-7.webp"loading="lazy"/></a>
+				<a href="assets/gold. D.webp" data-lightbox="models">	
+					<img  src="assets/gold. D.webp"loading="lazy"/></a>
+				<a href="assets/pyrénées 3b.webp" data-lightbox="models">	
+					<img  src="assets/pyrénées 3b.webp"loading="lazy"/></a>
+				<a href="assets/cheval.webp" data-lightbox="models">	
+					<img  src="assets/cheval.webp"loading="lazy"/></a>
+				<a href="assets/gear5.webp" data-lightbox="models">	
+					<img  src="assets/gear5.webp"loading="lazy"/></a>
+				<a href="assets/Moon.webp" data-lightbox="models">	
+					<img  src="assets/Moon.webp"loading="lazy"/></a>
+				<a href="assets/teal2.webp" data-lightbox="models">	
+					<img  src="assets/teal2.webp"loading="lazy"/></a>
+				<a href="assets/sunset 2 corse_.webp" data-lightbox="models">	
+					<img  src="assets/sunset 2 corse_.webp"loading="lazy"/></a>
+				<a href="assets/boat.webp" data-lightbox="models">	
+					<img  src="assets/boat.webp"loading="lazy"/></a>
+				<a href="assets/photo 1_-9.webp" data-lightbox="models">	
+					<img  src="assets/photo 1_-9.webp"loading="lazy"/></a>
 
 			</div>
 		</div>
