--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<button class="monBouton" onclick="scrollToImageContainer()">photography</button>
 				<button onclick="window.location.href='index2.html';" class="monBouton">videography</button>
    		</div>
-		<img id="wallpaper" src="assets/_DSC4953.webp" draggable=false />
+		<img id="wallpaper" src="assets/DSC4953.webp" draggable=false />
 		<img id="photos" src="assets/portrait1.jpeg" draggable=false />
 		<div id="title"><i>The World is full of hidden looks</i></div>
 		<div id="name">Cypriensard</div>
