--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 					<img  src="assets/export 3-9-min.webp"loading="lazy"/></a>
 				<a href="assets/polar fox-min.webp" data-lightbox="models">	
 					<img  src="assets/polar fox-min.webp"loading="lazy"/></a>
-				<a href="assets/COMPO ZINSTA-min.webp" data-lightbox="models">	
-					<img  src="assets/COMPO ZINSTA-min.webp"loading="lazy"/></a>
+				<a href="assets/COMPO-ZINSTA-min.webp" data-lightbox="models">	
+					<img  src="assets/COMPO-ZINSTA-min.webp"loading="lazy"/></a>
 				<a href="assets/cathédrale.webp" data-lightbox="models">	
 					<img  src="assets/cathédrale.webp"loading="lazy"/></a>
 				<a href="assets/tuture.webp" data-lightbox="models">	
