--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<button onclick="window.location.href='index2.html';" class="monBouton">videography</button>
    		</div>
 		<img id="wallpaper" src="assets/DSC4953.webp" draggable=false />
-		<img id="photos" src="assets/portrait1.jpeg" draggable=false />
+		<img id="photos" src="assets/Portrait1.jpeg" draggable=false />
 		<div id="title"><i>The World is full of hidden looks</i></div>
 		<div id="name">Cypriensard</div>
    		<div id="icon-container">
