--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 					<img  src="assets/moto 3.webp"loading="lazy" /></a>
 				<a href="assets/maison 3.webp" data-lightbox="models">
 					<img  src="assets/maison 3.webp" loading="lazy"/></a>
-				<a href="assets/bar  -min.webp" data-lightbox="models">
-					<img  src="assets/bar  -min.webp" loading="lazy"/></a>
+				<a href="assets/bar-_-min.webp" data-lightbox="models">
+					<img  src="assets/bar-_-min.webp" loading="lazy"/></a>
 				<a href="assets/bzz.webp" data-lightbox="models">
 					<img  src="assets/bzz.webp" loading="lazy"/></a>
 				<a href="assets/LUNAR.webp" data-lightbox="models">
