--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
 		<div class="video-part-container">
 			<div class="video">
 				<a href="https://youtu.be/egNNiX58cig">
-					<img  src="assets/ICELAND.jpg"/></a>		
+					<img  src="assets/islanddark.jpg"/></a>		
 				<a href="https://youtu.be/cPFp-wY9n10">
 					<img  src="assets/poster205.jpg"/></a>
     			</div>	
