--- a/index2.html
+++ b/index2.html
@@ -18,7 +18,7 @@
 				<a href="https://youtu.be/egNNiX58cig">
 					<img  src="assets/islanddark.jpg"/></a>		
 				<a href="https://youtu.be/cPFp-wY9n10">
-					<img  src="assets/_DSC8576.jpg"/></a>
+					<img  src="assets/_DSC8576-insta-2.jpg"/></a>
     			</div>	
 	</body>
 </html>
